swagger basic auth issues fixed
